# wqt

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  setup.py  something.html  test.sh  tox.ini
doc/: README.rst
templates/: .gitignore.tpl  CMakeLists-Apple.txt.tpl  CMakeLists.txt.tpl  app-README.md.tpl  config-apple.json.tpl  config.json.tpl
templates/applications/: gitignore.tpl
templates/applications/quick/src/: main.cpp
templates/cmake/: CMakeLists-Apple.txt.tpl  CMakeLists.txt.tpl
templates/cmake/console/: CMakeLists.txt
templates/cmake/quick/osx/: CMakeLists.txt
templates/cmake/quick/others/: CMakeLists.txt
templates/cmake/widgets/osx/: CMakeLists.txt
templates/cmake/widgets/others/: CMakeLists.txt
templates/config/: config-apple.json.tpl  config.json.tpl
templates/config/console/: properties.ini
templates/config/others/: config.json
templates/config/quick/osx/: properties.ini
templates/config/quick/others/: properties.ini
templates/config/widgets/osx/: properties.ini
templates/config/widgets/others/: properties.ini
templates/console/: main.cpp
templates/quick/: main.cpp
templates/readme/: lib-README.md.tpl
test2/: CMakeLists.txt
toolchain/cmake/: Functions.cmake  README.md  meta.hpp.in
toolchain/helper/: ResourceManager.h
toolchain/osx/cmake/: info.plist.in
toolchain/others/cmake/: Functions.cmake
wqt/: wqt.py
wqt/command/: application.py  creation.py  handle.py  resource.py
wqt/templates/: files.py  operations.py
wqt/toolchain/: operations.py
wqt/utils/: cmake.py  finder.py  helper.py  memoize.py  output.py
